[tool.poetry]
name = "python-starter"
version = "0.1.0"
description = "Boilerplate code for developing a python app in docker"
authors = ["Monique Rio <mrio@umich.edu>, Samuel Sciolla <ssciolla@umich.edu>, Lianet Sepulveda Torres <lisepul@umich.edu>, "]
readme = "README.md"
packages = [{include = "digitallib_experiments"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
transformers = "^4.40.2"
sentence-transformers = "^2.7.0"
pandas = "^2.2.2"
umap-learn = "^0.5.6"
altair = "^5.3.0"
notebook = "^7.1.3"
keybert = "^0.8.4"
wordcloud = "^1.9.3"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"


[tool.poetry.group.jupyter.dependencies]
notebook = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
